--- a/views/homepage.html
+++ b/views/homepage.html
@@ -24,7 +24,7 @@
 
 		<div style="font-family:font1; position:absolute; left:-1000px; visibility:hidden;">.</div>
 		<script src="https://cdn.jsdelivr.net/npm/phaser@3.16.2/dist/phaser.js"></script>
-		<script src="/dist/app.js"></script>
+		<script src="/public/app.js"></script>
 	</body>
 
 </html>
